--- a/simulation.tex
+++ b/simulation.tex
@@ -34,15 +34,15 @@
 \section{Introduction}
 \label{sec:intro}
 
-Despite the failure of two reaction wheels in 2012 and 2013, the \textit{Kepler} Space Telescope has continued to produce valuable data in its new configuration, \textit{K2}, with significantly higher precision than ground based telescopes \citep{2014PASP..126..398H}. However, due to the unstable pointing caused by the missing reaction wheels, targets have significant motion relative to the quantum sensitivity variation of the telescope detector, creating noise in \textit{K2} light curves. A number of attempts have been made to isolate and remove the instrumental noise from \textit{K2} data \citep{2015A&A...579A..19A, 0004-637X-806-1-30, 2015MNRAS.454.4159H, 2015MNRAS.447.2880A, 2016MNRAS.459.2408A}. Through the appication of data processing pipelines, namely the EPIC Variability Extraction and Removal for Exoplanet Science Targets (\texttt{EVEREST}) pipeline developed by \cite{2016AJ....152..100L}, the noise in \textit{K2} light curves can be reduced to the level of the original \textit{Kepler} mission for up to $15^{\text{th}}$ magnitude \citep{2017arXiv170205488L}.
+Despite the failure of two reaction wheels in 2012 and 2013, the \textit{Kepler} Space Telescope has continued to produce valuable data in its new configuration, \textit{K2}, with significantly higher precision than ground based telescopes \citep{2014PASP..126..398H}. However, due to the unstable pointing caused by the missing reaction wheels, targets have significant motion relative to the quantum sensitivity variation of the telescope detector, creating noise in \textit{K2} light curves. A number of attempts have been made to isolate and remove the instrumental noise from \textit{K2} data \citep{2015A&A...579A..19A, 0004-637X-806-1-30, 2015MNRAS.454.4159H, 2015MNRAS.447.2880A, 2016MNRAS.459.2408A}. Through the application of data processing pipelines, namely the EPIC Variability Extraction and Removal for Exoplanet Science Targets (\texttt{EVEREST}) pipeline developed by \cite{2016AJ....152..100L}, the noise in \textit{K2} light curves can be reduced to the level of the original \textit{Kepler} mission for up to $15^{\text{th}}$ magnitude \citep{2017arXiv170205488L}.
 
 However, as the \textit{Kepler} Space Telescope runs out of fuel, its motion due to thruster fires is expected to become less predictable and the magnitude of targets' motion relative to the detector will increase. With higher motion, targets will traverse more regions of varied pixel sensitivity, contributing more noise to the light curves of \textit{K2} targets. Eventually, when thruster fuel has been depleted entirely or the fuel level becomes too low for useful correction, the telescope may enter a phase of constant drift, at which point targets will traverse many pixels across the detector. This will also increase the likelihood of flux pollution from neighbors, as stellar PSFs may overlap over the course of a campaign.
 
-In this paper, we present an approach to characterize increased noise due to high motion and assess noise-removal methods. \S 2 describes the mathematical methods of our simulation, \S 3 explores the results of our testing, \S 4 elaborates on future applications of this work, \S 5 provides usuage examples, and \S 6 discusses our conclusions.
+In this paper, we present an approach to characterize increased noise due to high motion and assess noise-removal methods. \S 2 describes the mathematical methods of our simulation, \S 3 explores the results of our testing, \S 4 elaborates on future applications of this work, \S 5 provides usage examples, and \S 6 discusses our conclusions.
 
 \section{Methods}
 
-Effective removal of instrumental noise requires a thorough understanding of its source. Stellar motion relative to the pixel sensitivity variation on the \textit{Kepler} CCD causes fluctuation in the amount of light received by the telescope detector over time. In order to accurately simulate the intrumental noise characteristic of \textit{K2} light curves, it is necessary to generate a forward model for the pixel sensitivity variation of the CCD. Light curves that were simulated using this sensitivity variation model are adequate to serve as well-understood sample targets on which to determine noise levels resulting from light curves generated under conditions of high roll magnitude and apply de-trending methods. To accurately represent the \textit{Kepler} CCD, we generated a model for the detector that included both inter-pixel sensitivity variation between pixels and intra-pixel sensitivity variation within each pixel.
+Effective removal of instrumental noise requires a thorough understanding of its source. Stellar motion relative to the pixel sensitivity variation on the \textit{Kepler} CCD causes fluctuation in the amount of light received by the telescope detector over time. In order to accurately simulate the instrumental noise characteristic of \textit{K2} light curves, it is necessary to generate a forward model for the pixel sensitivity variation of the CCD. Light curves that were simulated using this sensitivity variation model are adequate to serve as well-understood sample targets on which to determine noise levels resulting from light curves generated under conditions of high roll magnitude and apply de-trending methods. To accurately represent the \textit{Kepler} CCD, we generated a model for the detector that included both inter-pixel sensitivity variation between pixels and intra-pixel sensitivity variation within each pixel.
 
 \subsection{PSF Model}
 
@@ -72,7 +72,7 @@ P(x,y) & = \sum_m \frac{1}{2\pi\sigma_{x,m}\sigma_{x,n}\sqrt{1-\rho_m^2}} \text{
 %
 where $\sigma_x$, $\sigma_y$ are the standard deviations of the PSF in $x$ and $y$, and $\rho$ is the correlation coefficient between $x$ and $y$.
 
-The coefficients $a_{x,n}, a_{y,n}$ were determined to emulate the magnitude of sensitivity variation on the \textit{Kepler} CCD based on its contribution to the noise in \textit{K2} light curves. Sensitivity coefficients are defined as independent in $x$ and $y$ for consistancy with the Kepler Intrument Handbook \citep{kepler_intrument_handbook}. Our method for choosing values for sensitivity variation coefficients $a_n$ is descried in the following section.
+The coefficients $a_{x,n}, a_{y,n}$ were determined to emulate the magnitude of sensitivity variation on the \textit{Kepler} CCD based on its contribution to the noise in \textit{K2} light curves. Sensitivity coefficients are defined as independent in $x$ and $y$ for consistency with the Kepler Instrument Handbook \citep{kepler_intrument_handbook}. Our method for choosing values for sensitivity variation coefficients $a_n$ is descried in the following section.
 
 \subsection{Pixel Sensitivity Variation}
 
@@ -91,9 +91,9 @@ We generated five synthetic light curves for each 0.5-Mag interval with the foll
 
 In Benchmark Test 2, we consider the case of current \textit{K2} motion. To accomplish this, we injected motion from 1,000 cadences of the \textit{K2} target EPIC 205998445, creating a simulated example of a current observation to benchmark our model against \textit{K2} data. EPIC 205998445 is a \textit{K2} C03 star with $Kp = 12.029$ located ${\sim}60\%$ of the distance from the center of the detector plane to its edge. Statistics about the motion data used in our simulation can be found in Table \ref{table:motionstatistics}. This star was chosen because it is an isolated $12^{\text{th}}$ magnitude star, and the peak of the magnitude distribution for C03 was roughly 12. It is also located far enough from the center of the detector that it experiences significant motion during roll events, but not too near the edge that its motion is uncharacteristically high for \textit{K2} targets.
 
-To calculate motion, the column pixel correction (\texttt{POS\_CORR1}) and row pixel correction (\texttt{POS\_CORR2}), corresponding to motion in $x$ and $y$ respectively, were accessed from the target pixel file header. These offsets were added to the calculated cetroid position of the simulated PSF for each cadence. Total magnitude of motion as reported in Table \ref{table:motionstatistics} represents the calculated maximum distance between centroid positions over the course of the simulated cadences.
+To calculate motion, the column pixel correction (\texttt{POS\_CORR1}) and row pixel correction (\texttt{POS\_CORR2}), corresponding to motion in $x$ and $y$ respectively, were accessed from the target pixel file header. These offsets were added to the calculated centroid position of the simulated PSF for each cadence. Total magnitude of motion as reported in Table \ref{table:motionstatistics} represents the calculated maximum distance between centroid positions over the course of the simulated cadences.
 
-With real \textit{K2} motion applied, sensitivity variation parameters were adjusted until CDPP versus $Kp$ Mag correspended to the trend of real \textit{K2} observations. Sensitivity variation was altered by adjusting the coefficients on the $s(x)s(y)$ polynomial model to achieve different drops in sensitivity from pixels' centers to their edges, as well as adjusting the random variation in sensitivity between pixels. We found that a stochastic distribution of sensitivity with up to $1\%$ variation between pixels and $2.48\%$ variation within pixels, from center to edge, resulted in Benchmark Test 2 following the most similar trend to the expected result. Our sensitivity polynomial went up to third order with coefficients \{1, 0, -0.05\}. The results of Benchmark Test 2 can be seen in Figure \ref{fig:1motion}.
+With real \textit{K2} motion applied, sensitivity variation parameters were adjusted until CDPP versus $Kp$ Mag corresponded to the trend of real \textit{K2} observations. Sensitivity variation was altered by adjusting the coefficients on the $s(x)s(y)$ polynomial model to achieve different drops in sensitivity from pixels' centers to their edges, as well as adjusting the random variation in sensitivity between pixels. We found that a stochastic distribution of sensitivity with up to $1\%$ variation between pixels and $2.48\%$ variation within pixels, from center to edge, resulted in Benchmark Test 2 following the most similar trend to the expected result. Our sensitivity polynomial went up to third order with coefficients \{1, 0, -0.05\}. The results of Benchmark Test 2 can be seen in Figure \ref{fig:1motion}.
 
 \begin{figure}[h]
 	\centering
@@ -102,7 +102,7 @@ With real \textit{K2} motion applied, sensitivity variation parameters were adju
 	\label{fig:1motion}
 \end{figure}
 
-A sample detector with included sensitivity variation can be seen in Figure \ref{fig:detector_sensitivity}. The calculation used in our simulation does not generate the sensitivity model and PSF individually, and instead passes the parameters into a singly-integrated function. This saves a computational step and speeds up the process. However, we were unable to solve the second integral prior to calculation because the first integral of a Gaussian results in an error function, which is non-analyitic.
+A sample detector with included sensitivity variation can be seen in Figure \ref{fig:detector_sensitivity}. The calculation used in our simulation does not generate the sensitivity model and PSF individually, and instead passes the parameters into a singly-integrated function. This saves a computational step and speeds up the process. However, we were unable to solve the second integral prior to calculation because the first integral of a Gaussian results in an error function, which is non-analytic.
 
 \begin{figure}[h]
 	\centering
@@ -132,7 +132,7 @@ To test how PLD performs on targets with high motion relative to the detector, w
 \end{center}
 \end{table}
 
-Our method to increase motion involved simply multiplying the pixel offset due to current \textit{K2} motion by constant coefficients. This ensured the target traversed more pixels over a wider range of the detector while keeping the position calculation simple enough to avoid introducing new opportunity for error. Because it is still unclear exactly how increased motion will manifest in the spacecraft's observations when fuel is expended, we opted to examine the simplest case of linearly increasing motion magnitude. It should be noted that this may not be the most appropriate treatment for all de-trending methods, particularly those that rely on fitting the centroid position of the target. However, the method used in the \texttt{EVEREST} pipeline (pixel level decorrelation) is agnostic to cetroid position and relies simply on the measured flux in each pixel, so our treatment of motion is thorough enough for the goal of testing noise-removal methods.
+Our method to increase motion involved simply multiplying the pixel offset due to current \textit{K2} motion by constant coefficients. This ensured the target traversed more pixels over a wider range of the detector while keeping the position calculation simple enough to avoid introducing new opportunity for error. Because it is still unclear exactly how increased motion will manifest in the spacecraft's observations when fuel is expended, we opted to examine the simplest case of linearly increasing motion magnitude. It should be noted that this may not be the most appropriate treatment for all de-trending methods, particularly those that rely on fitting the centroid position of the target. However, the method used in the \texttt{EVEREST} pipeline (pixel level decorrelation) is agnostic to centroid position and relies simply on the measured flux in each pixel, so our treatment of motion is thorough enough for the goal of testing noise-removal methods.
 
 \section{Results}
 
@@ -159,6 +159,8 @@ Synthetic targets with 2x current \textit{K2} motion achieved \textit{Kepler}-li
 
 These results were achieved by applying PLD to pixels within an aperture around our simulated stars. The aperture is defined to exclude extraneous background and photon noise in order to maximize light from our target. In applications for real targets, it is often necessary to also consider nearby bright stars when defining an aperture. \texttt{scope} includes the ability to add neighboring stars, however they were excluded from these tests for simplicity. Future consideration will be given to automating aperture definitions, particularly because high motion PSFs will traverse more pixels and will therefore have a higher likelihood of crowding.
 
+\section{Discussion}
+
 \section{Future Applications}
 
 Due to the internal optics of the Transiting Exoplanet Survey Satellite (\textit{TESS}), observed stellar PSFs may be large relative to the pixels on the CCD. In the instance that \textit{TESS} also faces motion issues, there will be a significant need to test de-trending methods with an emphasis on defining ideal apertures. With a combination of large PSFs and increased noise, apertures and associated aperture-based PLD methods will be an essential piece of our noise-removal strategy for \textit{TESS}.
@@ -167,11 +169,11 @@ Further, the space telescope's trajectory could cause a periodic variation in th
 
 The stellar PSF parameters can be easily adjusted in the forward model produced by \texttt{scope} to cover more pixels and more accurately capture PSFs characteristic of \textit{TESS} observations. Using this simulation, it would be valuable to test various apertures and motion cases prior to the first public release of observations.
 
-Seeing aberation and atmospheric interference are additional sources of noise that could be included in the \texttt{scope} model. PLD was developed for \textit{Spitzer} and modified for application to \textit{K2}, but has seen little application elsewhere. For ground-based observations with significant noise due to pointing issues or atmospheric interference, PLD may be a valuable tool to make the most of data. \texttt{scope} is an ideal testbed for this type of noise-removal because it allows users to perform tests on noisy observations of synthetic sources that are well understood with input parameters that can be compared to post-processing results. Though it was initially imagined for space-based telescopes, this software has potentially useful applications for ground-based telescopes.
+Seeing aberration and atmospheric interference are additional sources of noise that could be included in the \texttt{scope} model. PLD was developed for \textit{Spitzer} and modified for application to \textit{K2}, but has seen little application elsewhere. For ground-based observations with significant noise due to pointing issues or atmospheric interference, PLD may be a valuable tool to make the most of data. \texttt{scope} is an ideal testbed for this type of noise-removal because it allows users to perform tests on noisy observations of synthetic sources that are well understood with input parameters that can be compared to post-processing results. Though it was initially imagined for space-based telescopes, this software has potentially useful applications for ground-based telescopes.
 
 \section{Using \texttt{scope}}
 
-All of our code is open-source and publically available online. Our simulation package can be installed by running
+All of our code is open-source and publicly available online. Our simulation package can be installed by running
 %
 \begin{lstlisting}[language=bash]
 pip install tele-scope
@@ -213,6 +215,7 @@ To de-trend with second order PLD, run
 \begin{lstlisting}[language=Python]
 star.Detrend()
 \end{lstlisting}
+
 \section{Conclusions}
 
 We have created a forward model of the \textit{Kepler} space telescope detector, \texttt{scope}, which includes inter- and intra-pixel sensitivity variation and mathematical simulations of stellar PSFs to test de-trending methods for exoplanet targets. Using these simulations, we have demonstrated that \texttt{EVEREST} and PLD are  capable of reducing systematic noise to higher precision than ground based observations in \textit{K2} light curves with up to 10x current spacecraft motion. We have shown that in the event of spacecraft thruster sputtering due to diminishing fuel reserves, valuable data can likely still be collected and analyzed to benefit \textit{K2} science goals. The question surrounding the usefulness of high-motion data is increasingly relevant to making decisions about the future of \textit{K2} observations, and our hope is to emphasize the potential value in continued observation and contribute to the de-trending of future data.
