--- a/simulation.tex
+++ b/simulation.tex
@@ -15,8 +15,7 @@
 
 \begin{document}
 
-% \title{Simulated CCD Exoplanet Photometry: High-Motion Space Telescopes}
-\title{Simulated CCD Photometry: Low Pointing-Precision \textit{K2} Observations}
+\title{A Software Package to Simulate CCD Photometry: Application to High-Motion \textit{K2} Observations}
 
 \author{Nicholas Saunders \altaffilmark{1,2}, Rodrigo Luger \altaffilmark{3,4}, Rory Barnes \altaffilmark{3,4}}
 
