direct measurement section

--- a/simulation.tex
+++ b/simulation.tex
@@ -33,7 +33,7 @@
 \section{Introduction}
 \label{sec:intro}
 
-Despite the failure of two reaction wheels in 2012 and 2013, the \textit{Kepler} Space Telescope has continued to produce valuable data in its new configuration, \textit{K2}, with significantly higher precision than ground based telescopes \citep{2014PASP..126..398H}. However, due to the unstable pointing caused by the missing reaction wheels, targets have significant motion relative to the quantum sensitivity variation of the telescope detector, creating noise in \textit{K2} light curves. A number of attempts have been made to isolate and remove the instrumental noise from \textit{K2} data \citep{2015A&A...579A..19A, 0004-637X-806-1-30, 2015MNRAS.454.4159H, 2015MNRAS.447.2880A, 2016MNRAS.459.2408A}. Through the application of data processing pipelines, namely the EPIC Variability Extraction and Removal for Exoplanet Science Targets (\texttt{EVEREST}) pipeline developed by \cite{2016AJ....152..100L}, the noise in \textit{K2} light curves can be reduced to the level of the original \textit{Kepler} mission for up to $15^{\text{th}}$ magnitude \citep{2017arXiv170205488L}.
+Despite the failure of two reaction wheels in 2012 and 2013, the \textit{Kepler} Space Telescope has continued to produce valuable data in its new configuration, \textit{K2}, with significantly higher precision than ground based telescopes \citep{2014PASP..126..398H}. However, due to the unstable pointing caused by the missing reaction wheels, targets have significant motion relative to the quantum sensitivity variation of the telescope detector, creating noise in \textit{K2} light curves. A number of attempts have been made to isolate and remove the instrumental noise from \textit{K2} data \citep{2014PASP..126..948V,2015A&A...579A..19A, 0004-637X-806-1-30, 2015MNRAS.454.4159H, 2015MNRAS.447.2880A, 2016MNRAS.459.2408A}. Through the application of data processing pipelines, namely the EPIC Variability Extraction and Removal for Exoplanet Science Targets (\texttt{EVEREST}) pipeline developed by \cite{2016AJ....152..100L}, the noise in \textit{K2} light curves can be reduced to the level of the original \textit{Kepler} mission for up to $15^{\text{th}}$ magnitude \citep{2017arXiv170205488L}.
 
 However, as the \textit{Kepler} Space Telescope runs out of fuel, its motion due to thruster fires is expected to become less predictable and the magnitude of targets' motion relative to the detector will increase. With higher motion, targets will traverse more regions of varied pixel sensitivity, contributing more noise to the light curves of \textit{K2} targets. Eventually, when thruster fuel has been depleted entirely or the fuel level becomes too low for useful correction, the telescope may enter a phase of constant drift, at which point targets will traverse many pixels across the detector. This will also increase the likelihood of flux pollution from neighbors, as stellar PSFs may overlap over the course of a campaign.
 
@@ -160,7 +160,13 @@ These results were achieved by applying PLD to pixels within an aperture around 
 
 \section{Discussion}
 
-\section{Future Applications}
+\subsection{Direct Measurement of Sensitivity}
+
+We acknowledge the inconsistency in resultant intra-pixel sensitivity variation between our calibration tests and the direct measurement of the sub-pixel response by \cite{2018arXiv180607430V}. Future work is necessary to identify the source of the meaningfully different conclusions, and we would like to identify a number of factors that likely contribute. The primary suspect is the degeneracy between inter- and intra-pixel sensitivity variation in our motion benchmark, both of which contribute to the systematic noise of synthetic light curves. Also included in this degeneracy are the magnitudes of background noise and photon noise.
+
+Our calibration was based on \textit{K2} observations, and there are a number of physical differences between the current state of the space telescope detectors and the laboratory environment. \cite{2018arXiv180607430V} acknowledge the temperature difference, and when considered in combination with the potential degradation of the telescope detector after nearly a decade of use, this could result in a significant difference in measured sensitivity.
+
+\subsection{Future Applications}
 
 Due to the internal optics of the Transiting Exoplanet Survey Satellite (\textit{TESS}), observed stellar PSFs may be large relative to the pixels on the CCD. In the instance that \textit{TESS} also faces motion issues, there will be a significant need to test de-trending methods with an emphasis on defining ideal apertures. With a combination of large PSFs and increased noise, apertures and associated aperture-based PLD methods will be an essential piece of our noise-removal strategy for \textit{TESS}.
 
