--- a/references.bib
+++ b/references.bib
@@ -198,3 +198,18 @@ archivePrefix = "arXiv",
 }
 
 @article{toyozumi_ashley_2005, title={Intra-Pixel Sensitivity Variation and Charge Transfer Inefficiency — Results of CCD Scans}, volume={22}, DOI={10.1071/AS05013}, number={3}, journal={Publications of the Astronomical Society of Australia}, publisher={Cambridge University Press}, author={Toyozumi, Hiroyuki and Ashley, Michael C. B.}, year={2005}, pages={257–266}}
+
+@ARTICLE{2018arXiv180607430V,
+   author = {{Vorobiev}, D. and {Ninkov}, Z. and {Caldwell}, D. and {Mochnacki}, S.
+	},
+    title = "{Direct measurement of the intra-pixel response function of Kepler Space Telescope's CCDs}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1806.07430},
+ primaryClass = "astro-ph.IM",
+ keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
+     year = 2018,
+    month = jun,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180607430V},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
